--- a/tide_landing_page.info.yml
+++ b/tide_landing_page.info.yml
@@ -87,6 +87,10 @@ config_devel:
     - core.entity_view_display.paragraph.news_listing.default
     - core.entity_view_display.paragraph.phone.default
     - core.entity_view_display.paragraph.social_link.default
+    - core.entity_form_display.paragraph.compact_card.default
+    - core.entity_form_display.paragraph.compact_card_collection.default
+    - core.entity_view_display.paragraph.compact_card.default
+    - core.entity_view_display.paragraph.compact_card_collection.default
     - field.field.block_content.campaign.body
     - field.field.block_content.campaign.field_block_cta
     - field.field.block_content.campaign.field_block_image
@@ -207,6 +211,12 @@ config_devel:
     - field.field.paragraph.phone.field_paragraph_phone_title
     - field.field.paragraph.social_link.field_paragraph_link
     - field.field.paragraph.social_link.field_paragraph_social_list
+    - field.field.paragraph.compact_card.field_paragraph_link
+    - field.field.paragraph.compact_card.field_paragraph_media
+    - field.field.paragraph.compact_card.field_paragraph_summary
+    - field.field.paragraph.compact_card.field_paragraph_title
+    - field.field.paragraph.compact_card_collection.field_compact_card
+    - field.field.paragraph.compact_card_collection.field_paragraph_title
     - field.storage.block_content.field_block_cta
     - field.storage.block_content.field_block_image
     - field.storage.block_content.field_block_title
@@ -264,6 +274,7 @@ config_devel:
     - field.storage.paragraph.field_paragraph_social_list
     - field.storage.paragraph.field_paragraph_social_media
     - field.storage.paragraph.field_paragraph_webform
+    - field.storage.paragraph.field_compact_card
     - node.type.landing_page
     - paragraphs.paragraphs_type.banner
     - paragraphs.paragraphs_type.basic_text
@@ -292,6 +303,8 @@ config_devel:
     - paragraphs.paragraphs_type.phone
     - paragraphs.paragraphs_type.social_link
     - paragraphs.paragraphs_type.timelines
+    - paragraphs.paragraphs_type.compact_card
+    - paragraphs.paragraphs_type.compact_card_collection
   optional:
     - core.entity_form_display.paragraph.embedded_webform.default
     - core.entity_view_display.paragraph.embedded_webform.default
@@ -315,3 +328,4 @@ config_devel:
     - jsonapi_extras.jsonapi_resource_config.paragraph--keydates
     - jsonapi_extras.jsonapi_resource_config.paragraph--media_gallery
     - jsonapi_extras.jsonapi_resource_config.paragraph--social_link
+    - jsonapi_extras.jsonapi_resource_config.paragraph--compact_card
