--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,22 @@
 {
     "name": "dpc-sdp/tide_landing_page",
-    "description": "Landing Page content type and related configuration for Tide Drupal 8 distribution",
+    "description": "Landing Page content type and related configuration for Tide Drupal 10 distribution",
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "dev-feature/SRM-870-d10-update as 3.2.11",
-        "dpc-sdp/tide_media": "dev-feature/SRM-870-939-d10-update-d10 as 3.0.12",
-        "dpc-sdp/tide_event": "dev-feature/SRM-871-d10-update as 3.0.4"
+        "dpc-sdp/tide_core": "dev-feature/SRM-870-d10-update",
+        "dpc-sdp/tide_media": "dev-feature/SRM-870-939-d10-update-d10",
+        "dpc-sdp/tide_event": "dev-feature/SRM-871-d10-update"
     },
     "suggest": {
-        "dpc-sdp/tide_api:^3.0.8": "Allows to use Drupal in headless mode",
-        "dpc-sdp/tide_webform:^3.0.0": "Allows to use questionnaires",
-        "dpc-sdp/tide_news:^3.0.5": "News content type and related configuration for Tide Drupal 8 distribution"
+        "dpc-sdp/tide_api:dev-feature/SRM-948-d10-update": "Allows to use Drupal in headless mode",
+        "dpc-sdp/tide_webform:dev-feature/SRM-942-drupal-10": "Allows to use questionnaires",
+        "dpc-sdp/tide_news:dev-feature/SRM-954-d10-update": "News content type and related configuration for Tide Drupal 10 distribution"
     },
     "repositories": {
         "drupal": {
             "type": "composer",
-            "url": "https://packages.drupal.org/8"
+            "url": "https://packages.drupal.org/10"
         }
     }
 }
