--- a/config/install/core.entity_form_display.paragraph.statistics_grid.default.yml
+++ b/config/install/core.entity_form_display.paragraph.statistics_grid.default.yml
@@ -13,16 +13,22 @@ bundle: statistics_grid
 mode: default
 content:
   field_statistic_block:
-    type: entity_reference_paragraphs
+    type: paragraphs
     weight: 0
     settings:
       title: Paragraph
       title_plural: Paragraphs
       edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      closed_mode_threshold: 0
       add_mode: dropdown
       form_display_mode: default
       default_paragraph_type: statistic_block
       default_paragraph_count: 2
+      features:
+        collapse_edit_all: collapse_edit_all
+        duplicate: duplicate
     third_party_settings: {  }
     region: content
   field_statistics_grid_theme:
