[SDPAP-8095] Added unit test and helper module in dev-tools.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,6 +122,7 @@ workflows:
             branches:
               ignore:
                 - reference
+      - phpunit_tests
 
   mergetoreference:
     jobs:
