--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "dpc-sdp/tide_core": "^3.0.1",
         "dpc-sdp/tide_event": "^3.0.0",
-        "dpc-sdp/tide_media": "^3.0.9"
+        "dpc-sdp/tide_media": "^3.0.9",
+        "dpc-sdp/tide_api": "^3.0.14"
     },
     "suggest": {
         "dpc-sdp/tide_api:^3.0.8": "Allows to use Drupal in headless mode",
