--- a/config/install/field.storage.paragraph.field_paragraph_social_list.yml
+++ b/config/install/field.storage.paragraph.field_paragraph_social_list.yml
@@ -12,7 +12,7 @@ settings:
   allowed_values:
     -
       value: twitter
-      label: Twitter
+      label: X (formerly Twitter)
     -
       value: facebook
       label: Facebook
