--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
   },
   "require": {
     "dpc-sdp/tide_api": "dev-reference",
-    "dpc-sdp/tide_core": "dev-reference",
-    "dpc-sdp/tide_event": "dev-reference",
+    "dpc-sdp/tide_core": "dev-reference-SDPAP-8421 as dev-reference",
+    "dpc-sdp/tide_event": "dev-reference-SDPAP-8421 as dev-reference",
     "dpc-sdp/tide_media": "dev-reference"
   },
   "suggest": {
