--- a/config/install/field.storage.paragraph.field_paragraph_search_block.yml
+++ b/config/install/field.storage.paragraph.field_paragraph_search_block.yml
@@ -14,6 +14,12 @@ settings:
       value: none
       label: 'Full site search'
     -
+      value: event
+      label: Events
+    -
+      value: news
+      label: News
+    -
       value: custom
       label: Custom
   allowed_values_function: ''
