--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "drupal-module",
     "license": "GPL-2.0-or-later",
     "require": {
-        "dpc-sdp/tide_core": "^4.0.0",
+        "dpc-sdp/tide_core": "dev-feature/update-patch-token-body-summary as dev-develop",
         "dpc-sdp/tide_media": "^4.0.0",
         "dpc-sdp/tide_event": "^4.0.0",
         "dpc-sdp/tide_api": "^4.0.0"
